# revela

./: .gitignore  concept.md  deploy-staging.sh  next.config.ts  package-lock.json  package.json
.github/workflows/: deploy-staging.yml
.nginx/: revela-staging.conf
public/libraw-wasm/: libraw.wasm
scripts/: copy-wasm.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/app/: layout.tsx  page.tsx
src/components/editor/: ColorGrading.tsx  ColorMixer.tsx  DetailPanel.tsx  LutPanel.tsx  MaskPanel.tsx  Panel.tsx  PresetsPanel.tsx  RevelaEditor.tsx  Slider.tsx  ToneCurve.tsx
src/lib/: catalog.ts  gl-engine.ts  lut.ts  raw-decoder.ts  tauri-bridge.ts
