[package]
name = "revela"
version = "0.1.0"
description = "Revela - Photo Editor by GrainDays"
authors = ["Keito Uno"]
edition = "2021"

[lib]
name = "revela_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "revela"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rawler = { version = "0.7", default-features = false }
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
bytemuck = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
